traversal.snake.Snake.scala.error
Compilation error:
Snake:24: error: value ouest is not a member of object plm.universe.Direction
    }else if (getDirection()==Direction.ouest){
                                        ^