traversal.snake.Snake.scala.code
override def run() {
  while (!positionFinale()){
    baisseBrosse()
    leveBrosse()
    avance()
  }
}






def positionFinale():Boolean={
  if (estFaceMur){
    if (getDirection()==Direction.EST){
      gauche()
      if (estFaceMur){
        droite()
        return true
      }else{
        return false
      }
    }else if (getDirection()==Direction.ouest){
      droite()
      if (estFaceMur){
        gauche()
        return true
      }else{
        return false
      }
    }else{
      return false
    }
  }
  return false
}